# Reflection-Enhanced-Multi-Agent-RAG-RCA

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Justfile  PROJECT_IMPLEMENTATION_GUIDE.md  README.md  log_severity_classifier_modernbert.ipynb
.windsurf/skills/: mermaid-diagrams.md
classifier-service/: .env.example  README.md  pyproject.toml
classifier-service/app/: classifier.py  config.py  log_generator.py  main.py  schemas.py
classifier-service/app/routers/: classify.py  generate.py  health.py
classifier-service/tests/: test_api_smoke.py  test_log_generator.py
docs/: ARCHITECTURE_OVERVIEW.md  DEFENSE_GUIDE.md  DEMO.md  RESEARCH_QUESTIONS.md
docs/screenshots/: README.md
frontend/: .env.local.example  .gitignore  README.md  next.config.ts  package.json  pnpm-lock.yaml  vitest.config.mts  vitest.setup.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/agent-explorer/: page.tsx
frontend/src/app/classify/: page.test.tsx  page.tsx
frontend/src/app/incidents/: page.tsx
frontend/src/app/monitoring/: page.test.tsx  page.tsx
frontend/src/components/: agent-status-pill.test.tsx  agent-status-pill.tsx  service-status-pill.test.tsx  service-status-pill.tsx
frontend/src/components/agents/: AgentTimeline.test.tsx  AgentTimeline.tsx  MarkdownView.tsx
frontend/src/lib/: types.ts  utils.ts
frontend/src/lib/agents/: extract-root-cause.test.ts  extract-root-cause.ts
frontend/src/lib/api/: agents.test.ts  agents.ts  classifier.test.ts  classifier.ts
frontend/src/lib/hooks/: useAgentHealth.test.tsx  useAgentHealth.ts  useAgentStream.test.tsx  (+7 more)
helpful_scripts/: README.md  defense_qa.md  visualize_data_and_labels.py
rca-agent-system/: .env.example  README.md  pyproject.toml  server.py
rca-agent-system/eval/: README.md  incidents.jsonl
rca-agent-system/rca_system/: __init__.py  agent.py  settings.py
rca-agent-system/rca_system/agents/: __init__.py  memory_update_agent.py  reasoning_agent.py  reflection_agent.py  retrieval_agent.py
rca-agent-system/rca_system/memory/: __init__.py  chroma_store.py
rca-agent-system/rca_system/tools/: __init__.py  record_reflection.py  retrieve_incidents.py  update_memory.py
rca-agent-system/scripts/: evaluate.py  evaluate_memory_evolution.py  reset_memory.py  seed_knowledge_base.py
rca-agent-system/seed/incidents/: cert_expired.md  db_deadlock.md  disk_full.md  jvm_oom.md  redis_connection_refused.md  upstream_timeout.md
rca-agent-system/tests/: _fake_embed.py  test_agent_loads.py  test_chroma_store.py  test_evaluate.py  test_pipeline.py  test_record_reflection.py  test_reset_memory.py  test_retrieve_incidents.py  test_seed_knowledge_base.py  test_server.py  test_settings.py  test_update_memory.py
scripts/: run-all.sh
(+12 files in other folders)
