[project]
name = "classifier-service"
version = "0.1.0"
description = "FastAPI service wrapping the fine-tuned ModernBERT log-severity classifier."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "transformers>=4.48",
    "torch>=2.4",
    "tokenizers>=0.20",
    "safetensors>=0.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "pyright>=1.1.380",
    "pytest>=8.3",
    "httpx>=0.27",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.11"
