[project]
name = "rca-agent-system"
version = "0.1.0"
description = "Google ADK multi-agent system for automated root-cause analysis with reflection-driven dynamic memory."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Phase 5+ will add: google-adk, google-genai, chromadb,
    # sentence-transformers, sqlalchemy, aiosqlite, pydantic-settings,
    # python-dotenv, fastapi, uvicorn[standard]
]

[project.optional-dependencies]
dev = [
    # Phase 5+ will add: ruff, pyright, pytest, pytest-asyncio, httpx
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.11"
