[project]
name = "rca-agent-system"
version = "0.1.0"
description = "Google ADK multi-agent system for automated root-cause analysis with reflection-driven dynamic memory."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # ADK + Gemini
    "google-adk>=1.0.0",
    "google-genai>=1.0.0",
    # Web layer
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    # Session storage (ADK uses SQLAlchemy + aiosqlite for the dev DB).
    # `greenlet` is a transitive requirement of SQLAlchemy's async bridge --
    # not pulled automatically by sqlalchemy[asyncio], so we list it.
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "greenlet>=3.0",
    # Config
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    # Vector store (Phase 6+).
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    # YAML frontmatter parsing for seed/*.md files.
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "pyright>=1.1.380",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion = "3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
